cmake_minimum_required(VERSION 3.14.1)
set (CMAKE_CXX_STANDARD 11)
project (StorageHeaterController)
include_directories(${PROJECT_SOURCE_DIR})
enable_testing()
add_executable(StorageHeaterController main.cpp ConsoleView.cpp HeaterControlModel.cpp PresentationLayer.cpp)
add_executable(ModelTest HeaterControlModel.cpp ModelTest.cpp)
add_executable(ViewTest ConsoleView.cpp ViewTest.cpp) 
add_test(ModelTest ModelTest.exe)
add_test(ViewTest ViewTest.exe)
